# VaultStudio

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  electron-builder.yml  index.html  launch.js  main.js  package-lock.json  package.json  start.vbs  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: platform-installers.yml
Vault Streaming Studio website/: README.md  buy.html  buy.js  index.html  package.json  payments-config.js  script.js  styles.css  vite.config.mjs
Vault Streaming Studio website/downloads/: latest.json
docs/: platform-release-verification.md
docs/superpowers/plans/: 2026-06-11-vaultstudio-phase1-app-shell.md  2026-06-11-vaultstudio-phase2-obs-control.md  2026-06-12-bundled-obs-integration.md  2026-06-12-standalone-obs-replacement-plan.md  2026-06-13-vaultstudio-1-3-0-release.md  2026-06-16-native-gpu-mirror-and-activity-fixes.md
docs/superpowers/specs/: 2026-06-11-vaultstudio-mvp-design.md  2026-06-12-bundled-obs-integration-design.md  2026-06-12-standalone-obs-replacement-design.md  2026-06-15-chat-badges-and-replies-design.md  2026-06-16-native-gpu-mirror-and-activity-fixes.md
electron/: main.ts  preload.ts
electron/ipc/: chat-ipc.test.ts  chat-ipc.ts  chat-popout-ipc.ts  file-ipc.ts  index.test.ts  index.ts  irl-ipc.ts  layout-ipc.ts  license-ipc.ts  obs-file-fallback.ts  obs-ipc.ts  platform-ipc.test.ts  platform-ipc.ts  settings-ipc.ts  targets-ipc.ts  update-ipc.ts
electron/services/: chat-popout.test.ts  chat-popout.ts  drawing-overlay.test.ts  drawing-overlay.ts  irl-ingest.test.ts  irl-ingest.ts  license-service.test.ts  license-service.ts  multistream.ts  obs-addon-host.js  obs-engine.test.ts  obs-engine.ts  obs-service.ts  obs-worker-host.js  obs-worker.ts  platform-manager.test.ts  platform-manager.ts  preview-path-surface.test.ts  source-utils.test.ts  source-utils.ts  store.ts  stream-budget.test.ts  stream-budget.ts  stream-guard.ts  stream-stats.js  stream-stats.test.js  update-service.ts
electron/services/chat/: http.ts  kick-api.ts  kick-chat.ts  kick-mod.ts  kick-oauth.ts  oauth-loopback.ts  tiktok-chat.ts  twitch-api.ts  twitch-chat.test.ts  twitch-chat.ts  twitch-eventsub.ts  twitch-mod.ts  twitch-oauth.ts  youtube-api.ts  youtube-chat.ts  youtube-mod.ts  youtube-oauth.ts
keys/: README.md  public.pem
native/: CMakeLists.txt  build-obs.ps1  build-vlc-plugin.ps1  bundle-libvlc.ps1  capture-preview.js  prepare-obs-runtime-linux.sh  prepare-obs-runtime-macos.sh  prepare-obs-runtime.ps1
native/addon/: CMakeLists.txt  addon.cc  obs-audio.cc  obs-core.cc  obs-events.cc  obs-output.cc  obs-scenes.cc  obs-video.cc  package-lock.json  package.json  vs-common.h  vs-platform.h
native/addon/test/: default-desktop-audio.js  record-test.js  smoke.js
native/obs-deps/: gen-lib.bat  obs-fe.def  obs-frontend-api.lib  obs.def  obs.lib
native/obs-deps/include/: obs-audio-controls.h  obs-av1.h  obs-avc.h  obs-config.h  obs-data.h  obs-defs.h  obs-encoder.h  obs-ffmpeg-compat.h  obs-frontend-api.h  obs-hevc.h  obs-hotkey.h  obs-interaction.h  obs-internal.h  obs-missing-files.h  obs-module.h  obs-nal.h  obs-nix-platform.h  obs-output.h  obs-properties.h  obs-scene.h  obs-service.h  obs-source.h  obs.h  obsconfig.h  obsversion.h
native/obs-deps/include/callback/: calldata.h  decl.h  proc.h  signal.h
native/obs-deps/include/graphics/: axisang.h  bounds.h  device-exports.h  effect-parser.h  effect.h  graphics-internal.h  graphics.h  half.h  image-file.h  input.h  math-defs.h  math-extra.h  matrix3.h  matrix4.h  plane.h  quat.h  shader-parser.h  srgb.h  vec2.h  vec3.h  vec4.h
native/obs-deps/include/media-io/: audio-io.h  audio-math.h  audio-resampler.h  format-conversion.h  frame-rate.h  media-io-defs.h  media-remux.h  video-frame.h  video-io.h  video-scaler.h
native/obs-deps/include/util/: array-serializer.h  base.h  bitstream.h  bmem.h  buffered-file-serializer.h  c99defs.h  cf-lexer.h  cf-parser.h  config-file.h  crc32.h  darray.h  deque.h  dstr.h  file-serializer.h  lexer.h  pipe.h  platform.h  profiler.h  serializer.h  source-profiler.h  sse-intrin.h  task.h  text-lookup.h  threading-posix.h  threading-windows.h  threading.h  utf8.h  uthash.h  util_uint128.h  util_uint64.h
native/vlc-plugin/: CMakeLists.txt  vlc-video-plugin.c  vlc-video-plugin.h  vlc-video-source.c
payments-worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
payments-worker/scripts/: upload-pool.mjs
payments-worker/src/: index.js  index.test.js
scripts/: assert-native-runtime.mjs  generate-pro-keys.mjs  patch-electron-builder-extract.mjs  smoke-packaged-app.mjs  test-chat-popout-prod.js  test-edit-layout-prod.js  test-edit-layout.js  test-edit-layout.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src/__tests__/components/: ActivityFeed.test.tsx  AppChangelogPrompt.test.tsx  AudioMixer.test.tsx  ChangelogAccess.test.tsx  ChatPopoutPage.test.tsx  ContextMenu.test.tsx  ControlBar.test.tsx  DestinationsSection.test.tsx  PlatformBadge.test.tsx  PreviewPanel.preview.test.tsx  PreviewPanel.test.tsx  ProKeyPanel.test.tsx  ScenesPanel.test.tsx  SessionInfo.test.tsx  SettingsLayout.test.tsx  SourcesPanel.test.tsx  SplashScreen.test.tsx  UnifiedChat.test.tsx
src/__tests__/hooks/: useBlurDragCleanup.test.ts
src/__tests__/mocks/: cloudflare-workers.ts
src/__tests__/stores/: studioStore.test.ts
src/components/: ChangelogModal.tsx  ProKeyPanel.tsx  SplashScreen.tsx  UpdateToast.tsx
src/data/: changelog.ts
src/hooks/: useAppUpdate.ts  useBlurDragCleanup.ts  useKeyboardShortcuts.ts
src/mocks/: mockData.ts
src/pages/: ChatPopoutPage.tsx  StudioPage.tsx
src/stores/: studioStore.ts
src/theme/: GlobalStyles.tsx  tokens.ts
src/types/: index.ts
(+24 files in other folders)
